# ucursos-scraper

./: .env.example  .gitignore  MANIFEST.in  PACKAGE-TEST-RESULTS.md  README.md  build-deb.sh  config.py  pyproject.toml  requirements.txt  setup.py  ucursito  ucursito_wrapper.py
debian-template/DEBIAN/: control  postinst  prerm
src/: __init__.py  auth.py  calendar_export.py  calendar_server.py  main.py  scraper.py
